[package]
name = "prom2jsonrs"
version = "0.1.0"
authors = ["svahil9911 <vishalchauhan9911@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A utility to parse promethues data as json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
reqwest = {version = "0.10", features = ["blocking"]}
regex = "1"
lazy_static = "1.4.0"
maplit = "1.0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]  }
typetag = "0.1"
